deploy/k8s/overlays/dev/api-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rebar-api
spec:
  replicas: 1
